microk8s/dashboard/tls-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
  name: dashboard
  namespace: kube-system
spec:
  ingressClassName: public
  tls:
    - hosts:
        - dashboard.jdw.com
      secretName: kubernetes-dashboard-ingress-tls
  rules:
    - host: dashboard.jdw.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
